[project]
name = "sharewood-migrator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.5",
]

[project.scripts]
sharewood-migrator = "sharewood_cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sharewood_cli"]
